# smallModelTrain

./: .gitignore  README.md  pyproject.toml  style_contract.md
configs/: infer_eval_qwen3_4b.yaml  sft_qlora_qwen3_4b.yaml  sft_qlora_qwen3_4b_smoke_6144.yaml  stage5e_candidate_lr_probe.yaml
data_cards/: stage5_closure_chapter_execution_cards_approved.jsonl
data_clean/: stage5_closure_formal_corpus.jsonl
data_review/: stage5e_paired_judgments.jsonl
data_sft/: dataset_info_formal.json  sft_chapter_formal.jsonl  sft_chapter_formal_manifest.json
data_style/: stage5_closure_style_contract.md  stage5_closure_style_contract_author_main_v1.json  stage5_closure_style_metrics_author_main_v1.json  style_contract_author_main_v1.json  style_metrics_author_main_v1.json
docs/: code-design.zh.md  glossary.zh.md  index.zh.md  pipeline-flow.zh.md  project-map.zh.md  stage1-pipeline-guide.zh.md  stage3-data-bring-up-guide.zh.md  stage4-1-full50-archive.zh.md  stage4-1-full50-manual-review.zh.md  stage4-1-quality-eval-guide.zh.md  stage4-decision-log.zh.md  stage4-smoke-eval-guide.zh.md  stage4-summary-next-outlook.zh.md  stage5a-evidence-chain-hardening.zh.md  stage5b-style-contract-closure.zh.md  stage5c-formal-execution-cards-data-integrity.zh.md  stage5d-author-feedback-ai-taste-reduction.zh.md  stage5e-controlled-experimentation-efficiency.zh.md  troubleshooting.zh.md  two-stage-implementation-audit.zh.md  zero-start.zh.md
reports/: stage5_closure_report.md  stage5e_entry_check.json  stage5e_experiment_commands.jsonl  stage5e_experiment_manifest.json  (+2 more)
(+163 files in other folders)
