[project]
name = "small-model-train"
version = "0.1.0"
description = "Qwen3 QLoRA whole-chapter novel executor training pipeline"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
